# predictive-maintenance-app-backend

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  best_model.pkl  config.yaml  deploy.sh  docker-compose.yml  heroku.yml  main.py  package-lock.json  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
back-end/: Dockerfile  serve_model.py  train_model.py
back-end/models/: best_model.pkl  model_monitor.pkl
back-end/src/: ModelMonitor.py  main.py
back-end/tests/: test_model_monitor.py
models/: best_model.pkl
predictive-maintenance/: Dockerfile  README.md  package-lock.json  package.json
predictive-maintenance/src/: App.css  App.js  App.test.js
predictive-maintenance/src/components/: Footer.js  MonitorForm.js
predictive-maintenance/src/components/DataDescription/: DataDescription.css  DataDescription.js
predictive-maintenance/src/components/Header/: Header.css  Header.js
predictive-maintenance/src/components/MonitorForm/: MonitorForm.css  MonitorForm.js  MonitorForm.test.js
predictive-maintenance/src/components/Results/: Results.css
src/: ModelMonitor.py  data_utils.py
tests/: test_data_utils.py
utils/: data_utils.py
